RESOLVED FIXED106156
SVG images not created in CachedImage::CreateImage() due to blank mimetype
https://bugs.webkit.org/show_bug.cgi?id=106156
Summary SVG images not created in CachedImage::CreateImage() due to blank mimetype
Philip Rogers
Reported 2013-01-04 18:13:34 PST
If we load a cached SVG image in an html page (<img src="svg.svg">), CachedImage::createImage() will use a blank mimetype which will not create an SVGImage on the first pass. This bypasses the SVGImageCache entirely.
Attachments
First pass (2.97 KB, patch)
2013-01-09 15:02 PST, Philip Rogers
no flags
Philip Rogers
Comment 1 2013-01-09 15:02:26 PST
Created attachment 181994 [details] First pass
WebKit Review Bot
Comment 2 2013-01-11 12:25:10 PST
Comment on attachment 181994 [details] First pass Clearing flags on attachment: 181994 Committed r139484: <http://trac.webkit.org/changeset/139484>
WebKit Review Bot
Comment 3 2013-01-11 12:25:13 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.