Skip CachedImage::CreateImage if we don't have image data https://bugs.webkit.org/show_bug.cgi?id=106156

Reviewed by Nate Chapin.

This patch skips image creation if we do not have image data. This can occur during
cache revalidation when the revalidation request (304 not modified) comes back without
any content. In this revalidation case, the http spec requires that a mimetype not be set
on the response to prevent a cached resource from having a different mimetype
from the revalidated resource. Because revalidation requests do not have a mimetype,
CachedImage::CreateImage() will fail on SVG images. This patch prevents
CachedImage::CreateImage() from being called during revalidation.

No new tests as there are no observable changes from this patch.

* loader/cache/CachedImage.cpp:
(WebCore::CachedImage::data):


Canonical link: https://commits.webkit.org/124899@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139484 268f45cc-cd09-0410-ab3c-d52691b4dbfc